# npstyping

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.devcontainer/: devcontainer.json  post_create_script.sh
.github/workflows/: deploy_doc.yml
api/: index.html
docs/: api.md  index.md
sandbox/: README.md  sndarray_test.py
search/: search_index.json
src/npstyping/: npstyping.py  sndarray.py  stype.py
tests/: _test_stype.py  test_npstyping.py  test_stype.py
