[project]
name = "npstyping"
version = "0.0.1"
description = "Shape restrict numpy arrays"
authors = [
    {name = "fherb2",email = "herbrand@gmx.de"}
]

packages = [
    { include = "npstyping", from = "src" },
]

license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"

dependencies = [
    "numpy (==2)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
tox = "^4.24.1"
mypy = "^1.15.0"
pyright = "^1.1.396"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
